manifests/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: b3-app
spec:
  selector:
    app: b3-app
  ports:
  - port: 8080
    targetPort: 8080
