manifests/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: b3-postgres
spec:
  selector:
    app: b3-postgres
  ports:
  - port: 5432
    targetPort: 5432
