manifests/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: b3-app
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: b3-app
            port:
              number: 8080
